Fix appointment, notification, and medical record bugs